# dotfiles

./: README.md
bare_catkin_pkg/: CMakeLists.txt  package.xml
bash/: bashrc.symlink
catkin_bare_pkg/: CMakeLists.txt  package.xml
config/fstab/: fstab
git/: gitconfig.symlink.example  gitignore.symlink
qtcreator/: codingstyle.xml  xml.xml
qtcreator/generic-highlighter/: xml.xml
ros2/py_bare_pkg/: package.xml  setup.cfg  setup.py
ros2/py_bare_pkg/scripts/: talker.py
script/: bootstrap  edit_ini.py
tmux/: tmux.conf.symlink
vim/: vimrc.symlink
